# bathing-route

./: .gitignore  Justfile  README.md
backend/: .env.example  labels.db  pyproject.toml  sites.db
backend/config/: layers.yaml
backend/src/bathing_route/: api.py  cache.py  config.py  label_cache.py  main.py  models.py  wikidata_cache.py
backend/src/bathing_route/routers/: commons.py  wikidata.py
backend/src/bathing_route/services/: geo_service.py  gpx_service.py  wikidata_service.py
backend/tests/: test_api.py  test_cache.py  test_commons_router.py  test_config.py  test_geo_service.py  test_label_cache.py  test_services.py  test_wikidata_cache.py  test_wikidata_router.py  test_wikidata_service.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: BufferControl.vue  GpxUploader.vue  RouteMap.vue
frontend/src/composables/: useRoute.test.ts  useRoute.ts
frontend/src/config/: layers.yaml
frontend/src/i18n/: en.json  sv.json
frontend/src/utils/: commonsApi.ts  gpxExport.ts
scripts/: check_file_lengths.py
